# fast-api-poetry

fastapi-helloworld/: pyproject.toml
fastapi-helloworld/fastapi_helloworld/: main.py
fastapi-helloworld/tests/: test_all_routes.py
